--- a/src/pages/index/index.css
+++ b/src/pages/index/index.css
@@ -1,40 +1,32 @@
-// @import '~antd-mobile/lib/style/themes/default.less';
-
 .normal {
   font-family: Georgia, sans-serif;
   margin-top: 3em;
   text-align: center;
 }
-
 .title {
   font-size: 2.5rem;
   font-weight: normal;
   letter-spacing: -1px;
-  // background-color: @color-text-base;
 }
-
 .welcome {
   height: 328px;
   background: url(../../assets/yay.jpg) no-repeat center 0;
   background-size: 388px 328px;
 }
-
 .list {
   font-size: 1.2em;
   margin-top: 1.8em;
   list-style: none;
   line-height: 1.5em;
 }
-
 .list code {
   background: #f7f7f7;
 }
-
-// :global(.am-button-primary) {
-//   background-color: #1aad19;
-//   border: 1PX solid #1aad19;
-// }
-// :global(.am-button-primary.am-button-active) {
-//   background-color: #1aad19;
-//   border: 1PX solid #1aad19;
-// }
+:global(.am-button-primary) {
+  background-color: #1aad19;
+  border: 1PX solid #1aad19;
+}
+:global(.am-button-primary.am-button-active) {
+  background-color: #1aad19;
+  border: 1PX solid #1aad19;
+}
